# cmake_node_editor

./: .gitignore  README.md  pyproject.toml  setup.py
cmake_node_editor/: __init__.py  action_registry.py  batch_edit_dialog.py  cli.py  constants.py  creation_dialog.py  datas.py  editor_context.py  main.py  node_editor_window.py  node_editor_window_new.py  node_properties_dialog.py  node_scene.py  settings_dialog.py  worker.py
cmake_node_editor/dialogs/: batch_edit_dialog.py  creation_dialog.py  dependency_preview_dialog.py  node_properties_dialog.py  settings_dialog.py
cmake_node_editor/dialogs/widgets/: build_settings_form.py
cmake_node_editor/models/: __init__.py  data_classes.py
cmake_node_editor/scene/: __init__.py  graph_model.py  node_scene.py  serialization.py
cmake_node_editor/services/: cmake_command_builder.py  headless_builder.py  worker.py
cmake_node_editor/services/build_strategies/: __init__.py  base.py  cmake_strategy.py  custom_script_strategy.py
cmake_node_editor/views/: graphics_items.py  node_view.py
src/cmake_node_editor/: __init__.py  cli.py  constants.py  editor_context.py  main.py  node_editor_window.py  theme.py  undo_commands.py
src/cmake_node_editor/dialogs/: batch_edit_dialog.py  creation_dialog.py  node_properties_dialog.py  node_range_dialog.py  path_variables_dialog.py  settings_dialog.py
src/cmake_node_editor/scene/: graph_model.py  node_scene.py  serialization.py
src/cmake_node_editor/services/: cmake_command_builder.py  editor_detection.py  headless_builder.py  path_resolver.py  (+1 more)
tests/: test_datas.py
(+11 files in other folders)
